# fem_electrodiffusion_cellular_geometries

./: Dockerfile  README.md  pyproject.toml
docs/: _config.yml  api.rst  index.md
src/fem_electrodiffusion_cellular_geometries/: __init__.py  __main__.py  cli.py  main.py  make_figures.py  make_mesh_MMS.py  make_mesh_axonbundle_3D.py  make_mesh_one_neuron_2D.py  make_mesh_refinement_test.py  make_mesh_two_neurons_2D.py  make_mesh_two_neurons_wide_2D.py  run_2D_axons.py  run_3D_axonbundle.py  run_MMS_test.py  run_refinement_test.py  solver_knpemi.py  utils.py
